--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "conventional-changelog-unjs",
 	"type": "module",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"packageManager": "pnpm@8.7.5",
 	"description": "conventional-changelog unjs preset",
 	"author": "zhong666 <hi@zhong666.me>",
@@ -22,7 +22,8 @@
 	},
 	"scripts": {
 		"test": "vitest run",
-		"dev:test": "vitest"
+		"dev:test": "vitest",
+		"release": "release-it --ci"
 	},
 	"dependencies": {
 		"compare-func": "^2.0.0",
@@ -30,7 +31,10 @@
 		"scule": "^1.0.0"
 	},
 	"devDependencies": {
+		"@release-it/conventional-changelog": "^7.0.1",
 		"conventional-changelog-writer": "^7.0.1",
+		"conventional-changelog-unjs": "workspace:*",
+		"release-it": "^16.1.5",
 		"vitest": "^0.34.4"
 	}
 }
