--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"scripts": {
 		"test": "vitest run",
 		"dev:test": "vitest",
+		"lint": "eslint .",
 		"release": "release-it --ci"
 	},
 	"dependencies": {
@@ -31,9 +32,11 @@
 		"scule": "^1.3.0"
 	},
 	"devDependencies": {
+		"@aa900031/eslint-config": "^2.0.0",
 		"@release-it/conventional-changelog": "^8.0.2",
 		"conventional-changelog-unjs": "workspace:*",
 		"conventional-changelog-writer": "^8.0.0",
+		"eslint": "^9.10.0",
 		"release-it": "^17.6.0",
 		"vitest": "^2.1.1"
 	}
