chore(deps): upgrade release-it to 18.x.x (#19)
* chore(deps): upgrade release-it to 18.x.x

* chore(github-actions): setup nodejs respect .tool-versions file

* chore(github-actions): add release preview

* chore: remove specific registry-url

* chore: add repository info

* chore: fix

* fix: no compact

* chore: lint

* chore: add peer deps

--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -1,16 +1,18 @@
-name: Release
+name: Release Preview
 
 on:
   push:
+    branches:
+      - '**'
     tags:
-      - 'v*'
-
-permissions:
-  contents: write
+      - '!**'
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-  publish-npm:
+  publish-pkg-pr-new:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -25,10 +27,5 @@ jobs:
           cache: pnpm
           node-version-file: .tool-versions
 
-      - name: Install Dependencies
-        run: pnpm i
-
-      - name: Publish to npm
-        run: pnpm publish --access public --no-git-checks
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Publish to pkg.pr.new
+        run: pnpm dlx pkg-pr-new publish
