--- a/.release-it.json
+++ b/.release-it.json
@@ -1,4 +1,4 @@
 {
 	"$schema": "https://raw.githubusercontent.com/release-it/release-it/refs/heads/main/schema/release-it.json",
-	"extends": "gh:aa900031/release-it-config/base"
+	"extends": "@aa900031/release-it-config"
 }
