--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -9,18 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Setup Nodejs
-        uses: actions/setup-node@v4
-        with:
-          cache: pnpm
-          node-version-file: .tool-versions
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Publish to pkg.pr.new
         run: pnpm dlx pkg-pr-new publish --compact
