chore: use release-it-config (#28)
* wip

* chore: use release-it-config

* refactor: move action setups to split action

--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
 	},
 	"devDependencies": {
 		"@aa900031/eslint-config": "^3.1.0",
-		"@release-it/conventional-changelog": "^9.0.4",
+		"@aa900031/release-it-config": "^0.1.0",
 		"@vitest/coverage-istanbul": "^3.1.1",
-		"conventional-changelog-unjs": "workspace:*",
 		"conventional-changelog-writer": "^8.0.1",
 		"eslint": "^9.24.0",
-		"release-it": "^17.11.0",
+		"release-it": "https://pkg.pr.new/release-it@1ef2e54",
 		"vitest": "^3.1.1"
+	},
+	"resolutions": {
+		"@aa900031/release-it-config>conventional-changelog-unjs": "workspace:*"
 	}
 }
