--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"release": "release-it --ci"
 	},
 	"peerDependencies": {
-		"conventional-changelog": "^6.0.0"
+		"conventional-changelog": "^6.0.0 || ^7.0.0"
 	},
 	"dependencies": {
 		"compare-func": "^2.0.0",
